[gd_scene load_steps=8 format=3 uid="uid://cl3llj2h0g0ta"]

[ext_resource type="Shader" path="res://fix_the_bug_minigame/graphics/fix_the_bug_hud.gdshader" id="1_axjx8"]
[ext_resource type="Script" path="res://fix_the_bug_minigame/graphics/new_game.gd" id="2_72m7w"]
[ext_resource type="Texture2D" uid="uid://d042md3wck243" path="res://fix_the_bug_minigame/graphics/hud_bg.png" id="3_3fihv"]
[ext_resource type="Texture2D" uid="uid://bao3ecnvpitoy" path="res://fix_the_bug_minigame/graphics/debug_button.png" id="4_7pvxc"]
[ext_resource type="Texture2D" uid="uid://caki4ehwyek32" path="res://fix_the_bug_minigame/graphics/coin.png" id="5_f3pac"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rp7xb"]
render_priority = 0
shader = ExtResource("1_axjx8")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uybbq"]
size = Vector2(20, 146.667)

[node name="NewGame" type="Control"]
material = SubResource("ShaderMaterial_rp7xb")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_72m7w")

[node name="Panel" type="Sprite2D" parent="."]
texture = ExtResource("3_3fihv")

[node name="FirtstGame" type="Node2D" parent="."]
position = Vector2(-5, 0)

[node name="FixTheBug" type="Label" parent="FirtstGame"]
material = SubResource("ShaderMaterial_rp7xb")
offset_left = -106.0
offset_top = -105.0
offset_right = 105.0
offset_bottom = -47.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "Fix the Bug"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button" type="Area2D" parent="."]
position = Vector2(0, 88)
scale = Vector2(0.6, 0.6)

[node name="Sprite2D" type="Sprite2D" parent="Button"]
material = SubResource("ShaderMaterial_rp7xb")
position = Vector2(-1.66667, 20)
scale = Vector2(1.3, 1.3)
texture = ExtResource("4_7pvxc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button"]
position = Vector2(0, 20)
scale = Vector2(23, 1)
shape = SubResource("RectangleShape2D_uybbq")

[node name="ReplayGame" type="Node2D" parent="."]

[node name="BestScore" type="Label" parent="ReplayGame"]
offset_left = -80.0
offset_top = -88.0
offset_right = 93.0
offset_bottom = -54.0
theme_override_font_sizes/font_size = 24
text = "Nejlepší skóre:"
horizontal_alignment = 1
vertical_alignment = 1
visible_characters_behavior = 1

[node name="BestScoreValue" type="CenterContainer" parent="ReplayGame"]
offset_top = -37.0
offset_right = 40.0
offset_bottom = 3.0
use_top_left = true

[node name="BestSCoreValue" type="Label" parent="ReplayGame/BestScoreValue"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameScore" type="CenterContainer" parent="ReplayGame"]
offset_top = -132.0
offset_right = 40.0
offset_bottom = -92.0
use_top_left = true

[node name="GameScore" type="Label" parent="ReplayGame/GameScore"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1

[node name="Coins" type="CenterContainer" parent="ReplayGame"]
offset_top = 17.0
offset_right = 40.0
offset_bottom = 57.0
use_top_left = true

[node name="Coins" type="Label" parent="ReplayGame/Coins"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="Coin" type="Sprite2D" parent="ReplayGame"]
position = Vector2(-78, 16)
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_f3pac")

[connection signal="input_event" from="Button" to="." method="_on_button_input_event"]
